Added markup and styling to socials

--- a/styles/main.css
+++ b/styles/main.css
@@ -30,3 +30,16 @@
     width: max(50%,400px);
     display: inline;
 }
+
+.socials{
+    display: flex;
+    width: 50vw;
+    justify-content: space-around;
+    align-items: flex-start;
+}
+
+.social__icon{
+    height: 80px;
+    width: 80px;
+    border-radius: 100%;
+}
