--- a/styles/main.css
+++ b/styles/main.css
@@ -11,7 +11,7 @@
     border: 0px solid blue;
 }
 .body--background {
-    background-image: url("/images/background.svg");
+    background-image: url("../images/background.svg");
     background-size: cover;
     background-repeat: no-repeat;
     background-color: #1A1A1A;
@@ -51,6 +51,7 @@
     width: 100%;
     margin-top: 25%;
     margin-bottom: 15%;
+    margin-left: 12%;
     display: inline;
 }
 
