--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,8 @@
 *{
-    padding: none;
-    margin: none;
+    padding: 0;
+    margin: 0;
     box-sizing: border-box;
+    font-family: 'Montserrat', 'sans-serif';
 }
 
 .red-border{
@@ -10,6 +11,26 @@
 .blue-border{
     border: 0px solid blue;
 }
+.display--flex{
+    display: flex;
+}
+.flex--direction-col{
+    flex-direction: column;
+}
+.flex--justify-c-center{
+    justify-content: center;
+}
+.flex--align-c-center{
+    align-content: center;
+}
+.flex--align-i-center{
+    align-items: center;
+}
+
+.justify--self-end{
+    justify-self: end;
+}
+
 .body--background {
     background-image: url("../images/background.svg");
     background-size: cover;
@@ -17,42 +38,56 @@
     background-color: #1A1A1A;
 }
 .nav{
-    width: 50vw;
-    display: flex;
-    justify-content: space-around;
+    box-shadow: 0px 0px 3px -1px  #cbbdde;
+    height: 10vh;
+    width: 100%;
+    background-color: #1A1A1A;
+}
+.nav__logo-name{
+    height: 100%;
+    width: 100%;
+}
+.nav__div{
+    height: 100%;
+    width: 90%;
+    justify-content: end;
+}
+.nav__logo{
+    width: 60px;
+    margin: 2% 4%;
+}
+.nav__title{
+    visibility: hidden;
+    color: #dddddd;
+    font-size: 2rem;
 }
 
 .nav__item{
     text-decoration: none;
     color: #9E9E9E;
-    margin: 5% auto;
     font-family: 'Montserrat', 'sans-serif';
     font-size: 1.2rem;
-    padding: 1rem;
     border-radius: 5px;
+    margin: 2% 7%;
+    height: 70%;
+    width: 100px;
 }
 
 .nav__item:hover{
-    box-shadow: 0 0 5px 2px #353434
+    box-shadow: 0 0 5px 2px #353434;
 }
 .nav__item:active{
     color: #dddddd;
 }
 
 .container{
-    width: 50vw;
-    height: max(100%,100vh);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    width: 100%;
+    height: 80vh;
+    justify-content: space-between;
 }
 .about{
-    height: 100%;
-    width: 100%;
-    margin-top: 25%;
-    margin-bottom: 15%;
-    margin-left: 12%;
-    display: inline;
+    margin-top: 200px;
+    margin-left: 100px;
 }
 
 .about__title{
