--- a/styles/main.css
+++ b/styles/main.css
@@ -9,7 +9,10 @@
     border: 0px solid red;
 }
 .blue-border{
-    border: 0px solid blue;
+    border: 1px solid blue;
+}
+.border--bottom{
+    border-bottom: 1px solid #ffffff56;
 }
 .display--flex{
     display: flex;
@@ -30,12 +33,16 @@
 .justify--self-end{
     justify-self: end;
 }
-
+.background--color{
+    background-color: #1A1A1A;
+}
+.section--top-margin{
+    margin-top: 4%;
+}
 .body--background {
     background-image: url("../images/background.svg");
-    background-size: cover;
+    background-size: contain;
     background-repeat: no-repeat;
-    background-color: #1A1A1A;
 }
 .nav{
     box-shadow: 0px 0px 3px -1px  #cbbdde;
@@ -82,21 +89,20 @@
 
 .container{
     width: 100%;
-    height: 80vh;
+    height: 90vh;
     justify-content: space-between;
 }
-.about{
-    margin-top: 200px;
-    margin-left: 100px;
+.home{
+    margin-top: 15%;
+    margin-left: 7%;
 }
 
-.about__title{
-    font-family: 'Montserrat', 'sans-serif';
+.home__title{
     color: #dddddd;
     font-size: 4rem;
 }
 
-.about__introduction {
+.home__introduction {
     font-family: 'Montserrat', 'sans-serif';
     color: #dddddd;
     font-size: 2rem;
@@ -106,7 +112,7 @@
 }
 
 .socials{
-    display: flex;
+    margin-bottom: 3%;
     width: 50vw;
     justify-content: space-around;
     align-items: flex-start;
@@ -117,7 +123,6 @@
     height: 80px;
     width: 80px;
     border-radius: 100%;
-    display: flex;
     justify-content: center;
     align-items: center;
     box-shadow: 0 0px 50px 5px #000000;
@@ -128,4 +133,60 @@
 }
 .social__icon__image{
     height: 60px;
+}
+.about__title{
+    margin-top: 3%;
+    color: #dddddd;
+    font-size: 4rem;
+}
+.about__me{
+    color: #dddddd;
+    margin: 4% 100px;
+    font-size: 1.2rem;
+}
+.about__me-text{
+    padding-bottom: 2%;
+}
+.location--span{
+    color: aqua;
+    font-weight: bolder;
+}
+.education--span{
+    color: rgb(255, 0, 187);
+    font-weight: bolder;
+}
+.hobby--card{
+    width: 50%;
+    margin: 2% 2%;
+    box-shadow: 0 0 1px 1px #dddddd;
+    border-radius: 10%/20%;
+    overflow: hidden;
+}
+.hobby--image{
+    width: 100%;
+    height: 100%;
+    opacity: 50%;
+}
+.hobby--image:hover{
+    opacity: 100%;
+}
+
+.about__work-experience-cards{
+    width: 100%;
+}
+
+.about--work-card{
+    width: 50%;
+    margin: 1%;
+    padding: 2% 2%;
+    box-shadow: 0 0 10px 1px #dddddd4f;
+    border-radius: 4%/15%;
+    justify-content: space-around;
+}
+
+.about--work-card-title{
+    font-size: 1.2rem;
+}
+.about--work-card-content{
+    font-size: 1rem;
 }
