--- a/styles/main.css
+++ b/styles/main.css
@@ -4,7 +4,9 @@
     box-sizing: border-box;
     font-family: 'Montserrat', 'sans-serif';
 }
-
+:root{
+    scroll-behavior: smooth;
+}
 .red-border{
     border: 0px solid red;
 }
