--- a/styles/main.css
+++ b/styles/main.css
@@ -57,6 +57,7 @@
     height: 10vh;
     width: 100%;
     background-color: #1A1A1A;
+    z-index: 10;
     position: fixed;
 }
 .nav__logo-name{
@@ -68,9 +69,11 @@
     width: 90%;
     justify-content: end;
 }
-.nav__logo{
-    width: 60px;
+.nav__logo-container{
     margin: 2% 4%;
+}
+.nav__logo{
+    width: 50px;
 }
 .nav__title{
     visibility: hidden;
@@ -191,7 +194,7 @@
     margin: 1%;
     padding: 2% 2%;
     box-shadow: 0 0 10px 1px #dddddd4f;
-    border-radius: 4%/15%;
+    border-radius: 10%/20%;
     justify-content: space-around;
 }
 .about--work-card-title{
@@ -228,4 +231,18 @@
 .project__cards{
     margin: 4% 100px;
     font-size: 1.2rem;
+}
+
+@media only screen and (max-width: 768px){
+    .about__work-experience-cards{
+        flex-direction: column;
+        align-items: center;
+    }
+    .about--work-card{
+        width: 100%;
+    }
+    .project__cards{
+        flex-direction: column;
+    }
+
 }
