--- a/styles/main.css
+++ b/styles/main.css
@@ -14,10 +14,10 @@
     scroll-margin-top: 5vh;
 }
 .red-border{
-    border: 0px solid red;
+    border: 1px solid red;
 }
 .blue-border{
-    border: 0px solid blue;
+    border: 1px solid blue;
 }
 .border--bottom{
     border-bottom: 1px solid #ffffff56;
@@ -52,9 +52,12 @@
     background-size: contain;
     background-repeat: no-repeat;
 }
+.header{
+    width: 100%;
+    height: 10vh;
+}
 .nav{
     box-shadow: 0px 0px 3px -1px  #cbbdde;
-    height: 10vh;
     width: 100%;
     background-color: #1A1A1A;
     z-index: 10;
@@ -119,7 +122,7 @@
     color: #dddddd;
     font-size: 2rem;
     text-align: start;
-    width: 30rem;
+    width: 30%;
     margin-top: 2%;
 }
 
@@ -128,7 +131,6 @@
     width: 50vw;
     justify-content: space-around;
     align-items: flex-start;
-    
 }
 
 .social__icon{
@@ -234,6 +236,25 @@
 }
 
 @media only screen and (max-width: 768px){
+    .header{
+        height: 15vh;
+    }
+    .nav{
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 5%;
+    }
+    .nav__logo-name{
+        width: auto;
+        height: 7vh;
+    }
+    .nav__div{
+        height: 8vh;
+    }
+    .container{
+        height:auto;
+        width: 100%;
+    }
     .about__work-experience-cards{
         flex-direction: column;
         align-items: center;
@@ -244,5 +265,11 @@
     .project__cards{
         flex-direction: column;
     }
-
+    .home{
+        margin-top: 1%;
+        margin-left: 1%;
+    }
+    .socials{
+        width: 100%;
+    }
 }
