--- a/styles/main.css
+++ b/styles/main.css
@@ -154,11 +154,10 @@
     align-items: center;
     box-shadow: 0 0px 50px 5px #000000;
     position: relative;
-    top: 0;
-    transition: all 0.2s ease-in-out;
+    transition: all 0.4s ease-in-out;
 }
 .social__icon:hover {
-    top: 5px;
+    transform: scale(1.2);
     background-color: #735896;
     box-shadow: 0 0px 15px 8px #9883b3
 }
